--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "lodash": "^4.17.4",
     "postcss-loader": "^5.2.0",
     "resolve-url-loader": "^3.1.2",
-    "sass": "^1.32.8",
+    "sass": "^1.32.11",
     "sass-loader": "^11.0.1",
     "vue": "^2.5.7",
     "webpack-cli": "^4.6.0"
   },
   "dependencies": {
+    "css-loader": "^5.2.4",
+    "file-loader": "^6.2.0",
+    "ion-rangeslider": "^2.3.1",
     "node-sass": "^4.7.2",
     "webpack": "^5.31.0"
   }
